# django-hawk

./: CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  makefile  manage.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
django_hawk/: authentication.py  middleware.py  settings.py  types.py  utils.py
django_hawk/drf/: authentication.py
django_hawk/tests/: settings.py  test_hawk.py  test_views.py  test_views_django.py  urls.py  views.py
