[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "django-hawk"
version = "1.2.3"
description = "Authenticate Django Views with HAWK"
authors = ["Cameron Lamb <live.services@digital.trade.gov.uk>"]
license = "MIT"
readme = "README.md"
keywords = ["django"]
homepage = "https://github.com/uktrade/django-hawk"


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = ">=4.2, <5.2"
mohawk = ">=1.0.0, <2.0"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
tox = "^4"
freezegun = "*"
coverage = "*"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
isort = "*"
flake8 = "*"
black = "*"
mypy = "*"
django-stubs = "*"
types-freezegun = "*"
