[metadata]
name = django-hawk
author = 
author_email = 
description = 
version = 0.0.1
url = https://github.com/uktrade/django-hawk/
keywords =
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=2.2, <4.1
