[metadata]
name = django-hawk
author = 
author_email = 
description = 
version = 0.0.1
url = https://github.com/uktrade/django-hawk/
keywords =
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=2.2, <4.1
    djangorestframework
    mohawk

[mypy]
python_version = 3.10
plugins = 
  mypy_django_plugin.main,
  mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "django_hawk.tests.settings"

[mypy-mohawk.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
